yoshimi 1.4.x

2016-8-8 Will
* Defined direct commands for 'set default' and 'MIDI learn'.
* Activated CLI ID.
* Updated docs.

2016-8-7 Will
* Created src/UI/MiscGui.h to become only link between synth & GUI.
* Bugfix: Effects 'home' on right click had failed.
* Bugfix: AddSynth resonance wasn't showing on GUI button 2.

2016-8-6 Will
* Started actual direct control of filters.
* Added root and bank load times but in uS!
* minor doc updates.

2016-8-4 Will
* Bugfix: At startup all enabled parts were registering direct O/P
  when not actualy directed to part/both.
* Load time reporting now has its own switch.
* Added 'Switches' tab to Config window and moved them from 'Main'.

2016-8-4 Will
* Added load time (mS) to instrument load message.
* New feature: Auto-load default state.

2016-8-2 Will
* Applied gentoo build patches.
  (doesn't seem to make any difference to other distros)

2016-7-31 Will
* Updated docs - no code changes.

2016-7-30 Will
* Optimised parameter handling in direct access.
* Updated docs.

2016-7-28 Will
* Implimented direct access to effect inserts, but not the actual filter
  (sub) insert in dynfilter.
* Added 'Effect_Inserts' file to dev_notes.
* Updated other direct access docs.

2016-7-27 Will
* Bugfix: System effect sends wasn't reporting scroll wheel use.
* Added system and insertion base effect controls to direct access.
* Updated docs.

2016-7-24 Will
* Bugfix: Direct access reading harmonic values returned the wrong result.
* Added missing direct access part controls. Dunno how I missed them :(
* Updated docs.

2016-7-23 Will
* Completed Subsynth controls (not the inserts).
* Corrected doc errors :(

2016-7-22 Will
* Started implementing direct access to SubSynth controls.

2016-7-20 Will
* Minor doc corrections - no code changes.

2016-7-15 Will
* Bugfix: hadn't included new Interface files in LV2 :(

2016-7-14 Will
* Changed virtual keyboard roller to slider.

2016-7-5 Will
* Small doc updates - no code changes.

2016-7-1 Will